<resources>
    <string name="app_name">Bible Passages</string>
    <string name="app_shortname">Passages</string>
    <string name="pick_passage">New Passage</string>
    <string name="menuAbout">About</string>
    <string name="app_version">Version: 1.2</string>
    <string name="contact_me">You can contact me at</string>
    <string name="made_by">Made by Alex Carcar</string>
    <string name="email_address">alexcarcar77@gmail.com</string>
    <string name="launcher_icon">logo</string>
    <string name="add_favorite">Add to Favorites</string>
    <string name="pick_favorites">Favorites</string>
    <string name="clear_favorites">Clear Favorites</string>
    <string name="fav_instructions">Select favorite passages using the star tag. To remove items, go to a favorite passage and touch the selected star tag.\n\nEnjoy the scripture by collecting your favorite passages for future meditation!</string>
    <string name="go_back">Go Back</string>
    <string name="close">Close</string>
    <string name="next_passage">Next Passage</string>
    <string name="previous_passage">Previous Passage</string>
    <string name="pick_new_testament">New Testament</string>
    <string name="pick_old_testament">Old Testament</string>
    <string name="pick_psalm_proverb">Psalm/Proverb</string>
    <string name="pick_web_search">Commentary…</string>
    <string name="menuContents">Find…</string>
    <string name="table_of_contents">Table of Contents</string>
    <string name="matthew">Matthew</string>
    <string name="mark">Mark</string>
    <string name="luke">Luke</string>
    <string name="john">John</string>
    <string name="acts_of_the_apostles">Acts of the Apostles</string>
    <string name="romans">Romans</string>
    <string name="_1_corinthians">1 Corinthians</string>
    <string name="_2_corinthians">2 Corinthians</string>
    <string name="galatians">Galatians</string>
    <string name="ephesians">Ephesians</string>
    <string name="philippians">Philippians</string>
    <string name="colossians">Colossians</string>
    <string name="_1_thessalonians">1 Thessalonians</string>
    <string name="_2_thessalonians">2 Thessalonians</string>
    <string name="_1_timothy">1 Timothy</string>
    <string name="_2_timothy">2 Timothy</string>
    <string name="titus">Titus</string>
    <string name="philemon">Philemon</string>
    <string name="hebrews">Hebrews</string>
    <string name="james">James</string>
    <string name="_1_peter">1 Peter</string>
    <string name="_2_peter">2 Peter</string>
    <string name="_1_john">1 John</string>
    <string name="_2_john">2 John</string>
    <string name="_3_john">3 John</string>
    <string name="jude">Jude</string>
    <string name="revelation">Revelation</string>
    <string name="psalms">Psalms</string>
    <string name="job">Job</string>
    <string name="esther">Esther</string>
    <string name="esther_greek">Esther, Greek</string>
    <string name="proverbs">Proverbs</string>
    <string name="nehemiah">Nehemiah</string>
    <string name="ezra">Ezra</string>
    <string name="_2_chronicles">2 Chronicles</string>
    <string name="_1_chronicles">1 Chronicles</string>
    <string name="_2_kings">2 Kings</string>
    <string name="_1_kings">1 Kings</string>
    <string name="_2_samuel">2 Samuel</string>
    <string name="_1_samuel">1 Samuel</string>
    <string name="ruth">Ruth</string>
    <string name="judges">Judges</string>
    <string name="joshua">Joshua</string>
    <string name="genesis">Genesis</string>
    <string name="exodus">Exodus</string>
    <string name="leviticus">Leviticus</string>
    <string name="numbers">Numbers</string>
    <string name="deuteronomy">Deuteronomy</string>
    <string name="ecclesiastes">Ecclesiastes</string>
    <string name="song_of_solomon">Song of Solomon</string>
    <string name="isaiah">Isaiah</string>
    <string name="jeremiah">Jeremiah</string>
    <string name="lamentations">Lamentations</string>
    <string name="ezekiel">Ezekiel</string>
    <string name="daniel">Daniel</string>
    <string name="hosea">Hosea</string>
    <string name="joel">Joel</string>
    <string name="amos">Amos</string>
    <string name="obadiah">Obadiah</string>
    <string name="jonah">Jonah</string>
    <string name="micah">Micah</string>
    <string name="nahum">Nahum</string>
    <string name="habakkuk">Habakkuk</string>
    <string name="zephaniah">Zephaniah</string>
    <string name="haggai">Haggai</string>
    <string name="zechariah">Zechariah</string>
    <string name="malachi">Malachi</string>
</resources>
