<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainMenu"
    tools:context=".MainActivity">

    <item
        android:id="@+id/prevClick"
        android:icon="@drawable/ic_arrow_left"
        android:onClick="previousPassageClick"
        android:title="@string/previous_passage"
        myapp:showAsAction="always" />

    <item
        android:id="@+id/nextClick"
        android:icon="@drawable/ic_arrow_right"
        android:onClick="nextPassageClick"
        android:title="@string/next_passage"
        myapp:showAsAction="always" />

    <item
        android:id="@+id/favClick"
        android:icon="@drawable/ic_fav_off"
        android:onClick="onFavClick"
        android:title="@string/add_favorite"
        myapp:showAsAction="always" />

    <item
        android:id="@+id/aboutMenuItem"
        android:onClick="onAboutClick"
        android:title="@string/menuAbout" />

    <item
        android:id="@+id/pickFavoritesMenuItem"
        android:onClick="pickFavorites"
        android:title="@string/pick_favorites" />

    <item
        android:id="@+id/pickPassageMenuItem"
        android:onClick="pickPassage"
        android:title="@string/pick_passage" />

    <!--<item-->
    <!--android:id="@+id/clearFavoritesMenuItem"-->
    <!--android:onClick="clearFavorites"-->
    <!--android:title="@string/clear_favorites" />-->

</menu>